# vrc_osc_control

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: main.rs
src/styles/: global.css
