[package]
name = "vrc_osc_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
log = "0.4.14"
yew = "0.19.3"
reqwasm = "0.4.1"
wasm-bindgen-futures = "0.4.29"
futures = "0.3.21"
anyhow = "1.0.54"
